<resources>
    <string name="app_name">Firecheck</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="maintenance_card_transition_name">maintenance_card_%1$s</string>

    <string name="fetch_address">Fetch address</string>
    <string name="settings">Settings</string>

    <string name="address_found">Address found</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="close_button">Close button</string>
    <string name="logout">Logout</string>

    <!-- Login form -->
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>

    <!-- Registration form -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register a new account</string>
    <string name="already_registered">Already registered? Login intead</string>

    <!-- New extinguisher form -->
    <string name="extinguisher_id">Extinguisher ID</string>
    <string name="weight">Weight (Kg)</string>
    <string name="register_the_extignuisher">Register the extignuisher</string>

    <!-- New company form -->
    <string name="company_id">Company ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="my_position_icon">My position</string>
    <string name="register_the_company">Register a new company</string>

    <!-- New maintenance form -->
    <string name="register_the_maintenance">Register the maintenance</string>
    <string name="typology">Typology</string>
    <string name="maintenance_date">Maintenance date</string>
    <string name="maintenance">Maintenance</string>

    <string name="facebook_app_id">3489856041082244</string>
    <string name="fb_login_protocol_scheme">fb3489856041082244</string>
    <string name="fireless_logo">Fireless logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_account">New account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="close">Close</string>
    <string name="company_name">Company name</string>
    <string name="company">Company</string>
    <string name="extinguisher">Extinguisher</string>
    <string name="technician">Technician</string>
    <string name="date_of_maintenance">Date of maintenance</string>
    <string name="first_and_last_name">First and Last name</string>
    <string name="company_address">Company address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technician_home">Technician: </string>
    <string name="statistics">Statistics</string>
    <string name="new_maintenance">New maintenance</string>
    <string name="new_extinguisher">New extinguisher</string>
    <string name="new_company">New company</string>
    <string name="maintenance_item">Maintenance #</string>

</resources>