<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.fireless.firecheck.ui.company.NewCompanyViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:theme="@style/Widget.Design.TextInputLayout"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp"
                app:endIconMode="custom"
                app:error="@{viewModel.companyIdError}"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_id"
                    android:text="@{viewModel.companyId}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:endIconMode="custom"
                app:error="@{viewModel.nameError}"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.name}"
                    android:hint="@string/name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:error="@{viewModel.addressError}"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/company_name"
                app:layout_constraintStart_toStartOf="parent"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_my_location_24"
                app:endIconContentDescription="@string/my_position_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.address}"
                    android:hint="@string/address"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/new_company_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/register_the_company"
                android:onClick="@{(v) -> viewModel.createCompany(v)}"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/red_200"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>